--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ after_success:
     - git init
     - git add .
     - git commit -m "Travis Deploy"
-    - git push -f -q https://$GITHUB_USERNAME:$GITHUB_PASSWORD@github.com/$GITHUB_USERNAME/$GITHUB_USERNAME.github.io master
+    - git push -f -q https://$GITHUB_TOKEN@github.com/$GITHUB_USERNAME/$GITHUB_USERNAME.github.io master
