--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ title: Hexo
 subtitle:
 description:
 author: John Doe
-language:
+language: zh-Hans
 timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yuanjngsong.github.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: ':year/:month/:day/:title/'
 permalink_defaults:
 # Directory
 source_dir: source
