--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 # Site
 title: Oath
-subtitle: Stay Alive
+subtitle: 教练，我想学编程
 description: null
 author: yuanjngsong
 language: zh-Hans
@@ -33,6 +33,9 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
+auto_excerpt:
+    enable:true
+    length: 150
 highlight:
   enable: true
   line_number: true
@@ -55,10 +58,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-mathjax:
-    enable: true
-    per_page: true
-theme: landscape
+theme: next 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
