--- a/_config.yml
+++ b/_config.yml
@@ -40,11 +40,11 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
+  tab_replace: null
 # Category & Tag
 default_category: uncategorized
-category_map:
-tag_map:
+category_map: null
+tag_map: null
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
@@ -61,5 +61,9 @@ pagination_dir: page
 theme: next 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type:
+feed:
+    type: atom
+    path: atom.xml
+    limit: 0
+    hub:
+    content: true
