--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,13 @@
-# Hexo Configuration
-## Docs: https://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
-# Site
 title: Oath
 subtitle: 教练，我想学编程
 description: null
 author: yuanjngsong
 language: zh-Hans
-timezone:
-# URL
-## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
+timezone: null
 url: http://yuanjngsong.github.io
 root: /
 permalink: ':year/:month/:day/:title/'
-permalink_defaults:
-# Directory
+permalink_defaults: null
 source_dir: source
 public_dir: public
 tag_dir: tags
@@ -55,12 +48,7 @@ time_format: HH:mm:ss
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
 theme: next 
-# Deployment
-## Docs: https://hexo.io/docs/deployment.html
 feed:
     type: atom
     path: atom.xml
