--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: node_js
 node_js: 
     - "6"
 before_install:
-    - echo  $GITHUB_EMAIL 
-    - echo  $GITHUB_USERNAME
-    - echo  $THEME_URI
-    - echo  $THEME_NAME
+    - ssh-keygen -t rsa -C "532473857@qq.com"
+    - cat id_rsa.pub
     - git config --global user.email $GITHUB_EMAIL
     - git config --global user.name $GITHUB_USERNAME
     - npm i hexo-cli -g
