--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ time_format: HH:mm:ss
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
-theme:  apollo
+theme:  next
 feed:
     type: atom
     path: atom.xml
